--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "yarn@4.6.0",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "next": "12",
+    "react": "17",
+    "react-dom": "17"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "22",
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
+    "eslint": "8",
+    "eslint-config-next": "15",
+    "typescript": "5"
   }
 }
