--- a/package.json
+++ b/package.json
@@ -15,11 +15,20 @@
     "react-dom": "17"
   },
   "devDependencies": {
+    "@eslint/js": "8",
     "@types/node": "22",
     "@types/react": "^17",
     "@types/react-dom": "^17",
-    "eslint": "8",
+    "eslint": "8.57.0",
     "eslint-config-next": "15",
-    "typescript": "5"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
+    "typescript": "5",
+    "typescript-eslint": "^8.19.0"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2"
   }
 }
