--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "packageManager": "yarn@4.6.0",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "next": "12",
     "react": "17",
     "react-dom": "17"
