홈페이지 전체 레이아웃 구성중

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "editor.formatOnSave": true,
-  "editor.defultFormatter": "esbenp.prettier-vscode"
+  "editor.defultFormatter": "esbenp.prettier-vscode",
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  }
 }
