--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "packageManager": "yarn@4.6.0",
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "next": "12",
