--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emotion/styled": "^11.14.0",
     "next": "12",
     "react": "17",
-    "react-dom": "17"
+    "react-dom": "17",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/js": "8",
