--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "next": "12",
     "react": "17",
     "react-dom": "17",
-    "recoil": "^0.7.7"
+    "react-select": "5.8.0",
+    "recoil": "^0.7.7",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "@eslint/js": "8",
     "@types/node": "22",
     "@types/react": "^17",
     "@types/react-dom": "^17",
+    "@types/uuid": "^10.0.0",
     "eslint": "8.57.0",
     "eslint-config-next": "15",
     "eslint-config-prettier": "^9.1.0",
