--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@svgr/webpack": "^8.1.0",
     "next": "12",
     "react": "17",
     "react-dom": "17",
