--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@svgr/webpack": "^8.1.0",
+    "firebase": "^11.2.0",
     "next": "12",
     "react": "17",
     "react-dom": "17",
