--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@svgr/webpack": "^8.1.0",
     "firebase": "^11.2.0",
+    "moment": "^2.30.1",
     "next": "12",
     "react": "17",
     "react-dom": "17",
