--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@svgr/webpack": "^8.1.0",
+    "dompurify": "^3.2.3",
     "firebase": "^11.2.0",
     "moment": "^2.30.1",
     "next": "12",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "8",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "22",
     "@types/react": "^17",
     "@types/react-dom": "^17",
